# tla-connect

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix  rust-toolchain.toml
examples/: interactive_rpc.rs  replay_itf.rs  validate_ndjson.rs
src/: builder.rs  driver.rs  error.rs  lib.rs  replay.rs  trace_gen.rs  util.rs
src/rpc/: client.rs  mod.rs  types.rs
src/trace_validation/: emitter.rs  mod.rs  validator.rs
tests/: apalache_e2e_tests.rs  replay_tests.rs  rpc_tests.rs  snapshot_tests.rs  validation_tests.rs
tests/specs/: no_vars_replay.tla  trace_spec_no_rows.tla
