[package]
name = "tla-connect"
version = "0.0.3"
description = "TLA+/Apalache integration for model-based testing"
authors = ["nxbrain"]
edition = "2021"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wiggum-cc/tla-connect"
homepage = "https://github.com/wiggum-cc/tla-connect"
documentation = "https://docs.rs/tla-connect"
readme = "README.md"
keywords = ["tla", "apalache", "model-checking", "testing", "verification"]
categories = ["development-tools::testing", "science"]

[features]
default = ["replay", "trace-gen", "trace-validation"]

# Core replay functionality (ITF trace replay against Driver)
replay = ["dep:similar"]

# Apalache CLI trace generation
trace-gen = ["dep:tempfile"]

# Post-hoc trace validation (NDJSON -> Apalache TraceSpec)
trace-validation = ["dep:tempfile"]

# Interactive symbolic testing via Apalache JSON-RPC server
rpc = ["dep:reqwest", "dep:tokio", "dep:rand", "dep:base64"]

# Parallel trace replay using rayon
parallel = ["dep:rayon"]

# Enable all features
full = ["replay", "trace-gen", "trace-validation", "rpc", "parallel"]

[dependencies]
# ITF trace format deserialization
itf = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

# Diff output for state mismatches (replay feature)
similar = { version = "2", optional = true }

# Temp directory for Apalache output (trace-gen, trace-validation features)
tempfile = { version = "3", optional = true }

# HTTP client for Apalache JSON-RPC (rpc feature)
reqwest = { version = "0.13", features = ["json"], optional = true }

# Async runtime for JSON-RPC client (rpc feature)
tokio = { version = "1", features = ["process", "fs", "rt"], optional = true }

# Random selection for interactive testing (rpc feature)
rand = { version = "0.9", optional = true }

# Base64 encoding for Apalache server spec loading (rpc feature)
base64 = { version = "0.22", optional = true }

# Parallel trace replay (parallel feature)
rayon = { version = "1.10", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
